# PathTracer

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  PathTracer.cpp  PathTracer.sln  PathTracer.vcxproj  README.md  vcpkg.json
shaders/: gradient.comp  input_structures.glsl  mesh.frag  mesh.vert  pathtracing.comp  tex_image.frag  triangle.vert
src/: camera.cpp  camera.hpp  engine.cpp  engine.hpp  main.cpp  renderable.cpp  vk_descriptors.cpp  vk_descriptors.hpp  vk_images.cpp  vk_images.hpp  vk_initializers.cpp  vk_initializers.hpp  vk_loader.cpp  vk_loader.hpp  vk_pipelines.cpp  vk_pipelines.hpp  vk_types.hpp
